--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
+    "android": "DARK_MODE=media expo start --android",
+    "ios": "DARK_MODE=media expo start --ios",
+    "web": "DARK_MODE=media expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
   },
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@gluestack-ui/button": "^1.0.7",
     "@react-navigation/native": "^6.0.2",
+    "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.26",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
@@ -29,11 +31,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-document-picker": "^9.3.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-video": "^6.4.3",
+    "react-native-web": "~0.19.10",
+    "react-native-wgpu": "^0.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -42,6 +47,8 @@
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "jscodeshift": "^0.15.2",
+    "prettier": "^3.3.3",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
