--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "DARK_MODE=media expo start --android",
-    "ios": "DARK_MODE=media expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "DARK_MODE=media expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "postinstall": "patch-package"
   },
   "jest": {
     "preset": "jest-expo"
@@ -17,7 +18,9 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@gluestack-ui/button": "^1.0.7",
+    "@gluestack-ui/nativewind-utils": "^1.0.23",
     "@react-navigation/native": "^6.0.2",
+    "autoprefixer": "^10.4.20",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.26",
     "expo-constants": "~16.0.2",
@@ -28,9 +31,13 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "fs-extra": "^11.2.0",
+    "nativewind": "^4.0.36",    
+    "postcss": "^8.4.41",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-css-interop": "^0.0.34",
     "react-native-document-picker": "^9.3.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
@@ -50,6 +57,7 @@
     "jscodeshift": "^0.15.2",
     "prettier": "^3.3.3",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.4.10",
     "typescript": "~5.3.3"
   },
   "private": true
