--- a/package.json
+++ b/package.json
@@ -18,13 +18,19 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@gluestack-ui/button": "^1.0.7",
+    "@gluestack-ui/image": "^0.1.10",
     "@gluestack-ui/nativewind-utils": "^1.0.23",
+    "@gluestack-ui/spinner": "^0.1.14",
+    "@gluestack-ui/toast": "^1.0.7",
+    "@legendapp/motion": "^2.3.0",
     "@react-navigation/native": "^6.0.2",
+    "@shopify/react-native-skia": "^1.3.10",
     "autoprefixer": "^10.4.20",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.26",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.21",
     "expo-splash-screen": "~0.27.5",
@@ -32,20 +38,24 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "fs-extra": "^11.2.0",
-    "nativewind": "^4.0.36",    
+    "lottie-react-native": "^6.7.2",
+    "nativewind": "^4.0.36",
     "postcss": "^8.4.41",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-css-interop": "^0.0.34",
     "react-native-document-picker": "^9.3.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.5.0",
     "react-native-video": "^6.4.3",
     "react-native-web": "~0.19.10",
-    "react-native-wgpu": "^0.1.2"
+    "react-native-wgpu": "^0.1.2",
+    "wgpu-matrix": "^3.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
