fixed the stracture of the project. Split component with multiple responsibility.

--- a/app.json
+++ b/app.json
@@ -14,7 +14,8 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "liron"
+      "bundleIdentifier": "liron",
+      "requireFullScreen": true
     },
     "android": {
       "adaptiveIcon": {
