--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@gluestack-ui/spinner": "^0.1.14",
     "@gluestack-ui/toast": "^1.0.7",
     "@legendapp/motion": "^2.3.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^6.0.2",
     "@shopify/react-native-skia": "^1.3.10",
     "autoprefixer": "^10.4.20",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.26",
-    "expo-constants": "~16.0.2",
+    "expo-constants": "^16.0.2",
     "expo-font": "~12.0.9",
     "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
@@ -54,7 +55,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.5.0",
-    "react-native-video": "^6.4.3",
+    "react-native-video": "^6.4.4",
     "react-native-video-processing": "^1.7.2",
     "react-native-web": "~0.19.10",
     "react-native-wgpu": "^0.1.2",
