--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "ffmpeg-kit-react-native": "^6.0.2",
     "fs-extra": "^11.2.0",
     "lottie-react-native": "^6.7.2",
     "nativewind": "^4.0.36",
@@ -54,9 +55,9 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-share": "^10.2.1",
     "react-native-svg": "^15.5.0",
     "react-native-video": "^6.4.4",
-    "react-native-video-processing": "^1.7.2",
     "react-native-web": "~0.19.10",
     "react-native-wgpu": "^0.1.2",
     "wgpu-matrix": "^3.0.2"
