--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "hooks/helpers"
+    "app/(videoPlayer)/videoPlayer/helpers"
   ]
 }
